Add gangwar area for Altstadt and Farm